[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-prompt"
version = "0.1.0"
description = "Simplified SAM3 for prompt-based image segmentation"
readme = "README.md"
license = "LicenseRef-SAM"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
dependencies = [
    "ftfy>=6.3.1",
    "huggingface-hub>=1.6.0",
    "iopath>=0.1.10",
    "numpy>=2.2.6",
    "regex>=2026.2.28",
    "timm>=1.0.25",
]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "ipywidgets>=8.1.8", "ruff>=0.15.5"]

[project.urls]
"Homepage" = "https://github.com/jshirota/sam-prompt"
"Bug Tracker" = "https://github.com/jshirota/sam-prompt/issues"

[tool.setuptools.packages.find]
include = ["sam_prompt*"]
exclude = ["build*"]

[tool.setuptools.package-data]
sam_prompt = ["assets/*.txt.gz"]
