[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-prompt"
version = "0.1.4"
description = "Simplified SAM3 for prompt-based image segmentation"
readme = "README.md"
license = "LicenseRef-SAM"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
dependencies = [
    "ftfy>=6.1.0; python_version == '3.10'",
    "ftfy>=6.1.1; python_version == '3.11'",
    "ftfy>=6.1.3; python_version == '3.12'",
    "ftfy>=6.3.0; python_version == '3.13'",
    "ftfy>=6.3.1; python_version >= '3.14'",
    "huggingface-hub>=0.10.0; python_version == '3.10'",
    "huggingface-hub>=0.11.0; python_version == '3.11'",
    "huggingface-hub>=0.17.0; python_version == '3.12'",
    "huggingface-hub>=0.25.0; python_version == '3.13'",
    "huggingface-hub>=1.6.0; python_version >= '3.14'",
    "numpy>=1.21.2; python_version == '3.10'",
    "numpy>=1.23.2; python_version == '3.11'",
    "numpy>=1.26.0; python_version == '3.12'",
    "numpy>=2.1.0; python_version == '3.13'",
    "numpy>=2.4.4; python_version >= '3.14'",
    "regex>=2022.1.18; python_version == '3.10'",
    "regex>=2022.10.31; python_version == '3.11'",
    "regex>=2023.10.3; python_version == '3.12'",
    "regex>=2024.9.11; python_version == '3.13'",
    "regex>=2026.2.28; python_version >= '3.14'",
    "timm>=0.5.4; python_version == '3.10'",
    "timm>=0.6.7; python_version == '3.11'",
    "timm>=0.9.12; python_version == '3.12'",
    "timm>=1.0.11; python_version == '3.13'",
    "timm>=1.0.25; python_version >= '3.14'",
]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "ipywidgets>=8.1.8", "ruff>=0.15.5"]

[project.urls]
"Homepage" = "https://github.com/jshirota/sam-prompt"
"Bug Tracker" = "https://github.com/jshirota/sam-prompt/issues"

[tool.setuptools.packages.find]
include = ["sam_prompt*"]
exclude = ["build*"]

[tool.setuptools.package-data]
sam_prompt = ["assets/*.txt.gz"]
